--- a/views/partials/server.ejs
+++ b/views/partials/server.ejs
@@ -18,6 +18,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="card.css">
 
 </head>
@@ -28,8 +29,14 @@
 
 <body style="width: 100%;height: 100vh;background-color: #2e3440;">
 
-
+  <section class="text-center border rounded border-secondary child parent"
+   style="margin: 59px;margin-top: 49px;margin-right: 16px;padding: 10px;background-color: #4c566a;width: 370px;height: 199px;border-radius: 30px;border-width: 0px;"><img class="border rounded-circle" src="https://<%= document.id && document.icon ? `cdn.discordapp.com/icons/${document.id}/${document.icon}.png` : `discordapp.com/assets/dd4dbc0016779df1378e7812eabaa04d.png` %>" style="width: 100px;height: 100px;">
+    <p style="color: rgb(255,255,255);font-size: 22px;"><%= document.name %></p><a class="btn btn-secondary" type="button" style="margin-top: -10px;background-color: #2e3440;" href="/dashboard/server/<%= document.id %>/">View Server</a></section>
   
+  </section>
+
+
+  <!-- OLD 
 
 
   <section class="text-center border rounded border-secondary child parent"
@@ -49,6 +56,7 @@
     </style>
   </section>
   </div>
+  -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 </body>
