--- a/views/partials/server.ejs
+++ b/views/partials/server.ejs
@@ -29,8 +29,8 @@
 
 <body style="width: 100%;height: 100vh;background-color: #2e3440;">
 
-  <section class="text-center border rounded border-secondary child parent"
-   style="margin: 59px;margin-top: 49px;margin-right: 16px;padding: 10px;background-color: #4c566a;width: 370px;height: 199px;border-radius: 30px;border-width: 0px;"><img class="border rounded-circle" src="https://<%= document.id && document.icon ? `cdn.discordapp.com/icons/${document.id}/${document.icon}.png` : `discordapp.com/assets/dd4dbc0016779df1378e7812eabaa04d.png` %>" style="width: 100px;height: 100px;">
+  <section class="text-center rounded child parent"
+   style="margin: 59px;margin-top: 49px;margin-right: 16px;padding: 10px;background-color: #4c566a;width: 370px;height: 199px; border-radius: 30px;border-width: 0px;  box-shadow: 0px 0px 20px #222325;"><img class="rounded-circle" src="https://<%= document.id && document.icon ? `cdn.discordapp.com/icons/${document.id}/${document.icon}.png` : `discordapp.com/assets/dd4dbc0016779df1378e7812eabaa04d.png` %>" style="width: 100px;height: 100px; color: #4c566a !important;">
     <p style="color: rgb(255,255,255);font-size: 22px;"><%= document.name %></p><a class="btn btn-secondary" type="button" style="margin-top: -10px;background-color: #2e3440;" href="/dashboard/server/<%= document.id %>/">View Server</a></section>
   
   </section>
