Added animations to the text

--- a/views/partials/server.ejs
+++ b/views/partials/server.ejs
@@ -5,7 +5,7 @@
   src="https://<%= username.id && username.avatar ? `cdn.discordapp.com/avatars/${username.id}/${username.avatar}.png` : `discordapp.com/assets/dd4dbc0016779df1378e7812eabaa04d.png` %>"
   width="150px" height="150px" style="margin-top: 53px;box-shadow: 0px 0px 20px;">
 <h1
-  style="font-family: Roboto, sans-serif;color: rgb(255,255,255);font-size: 36px;padding-top: 9px;margin-top: 77px;">
+  style="font-family: Roboto, sans-serif;color: rgb(255,255,255);font-size: 36px;padding-top: 9px;margin-top: 77px;" class="tracking-in-expand">
   <%= username.username %>#<%= username.discriminator %></h1>
 
 </section>
@@ -20,6 +20,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
   <link rel="stylesheet" href="card.css">
+  <link rel="stylesheet" href="text.css">
+
+
 
 </head>
 
