That didnt work for some reason

--- a/views/serverdash.ejs
+++ b/views/serverdash.ejs
@@ -21,7 +21,7 @@
             src="https://<%= serverinfo[0].id && serverinfo[0].icon ? `cdn.discordapp.com/icons/${serverinfo[0].id}/${serverinfo[0].icon}.png` : `discordapp.com/assets/dd4dbc0016779df1378e7812eabaa04d.png` %>"
             width="213px" height="213px" style="margin-top: 53px;box-shadow: 0px 0px 20px;">
         <h1
-            style="font-family: Roboto, sans-serif;color: rgb(255,255,255);font-size: 36px;padding-top: 9px;margin-top: 77px;" class="tracking-in-expand">
+            style="font-family: Roboto, sans-serif;color: rgb(255,255,255);font-size: 36px;padding-top: 9px;margin-top: 77px;">
             <%= serverinfo[0].name %></h1>
 
     </section>
